click on Safari fixed V2

--- a/css/partners.css
+++ b/css/partners.css
@@ -88,6 +88,7 @@
 .subscribe {
   font-family: Inter;
   position: relative;
+  cursor: pointer;
 }
 .subscribe .subscribe__box-wrapper {
   -webkit-animation: skyingCard infinite ease-in-out 5s;
